--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node_modules/.bin/jest",
     "eslint": "eslint \"src/**/*.js\"",
     "eslint-fix": "eslint --fix \"src/**/*.js\""
   },
@@ -25,11 +25,15 @@
     "@babel/preset-react": "^7.10.4",
     "@svgr/webpack": "^5.4.0",
     "babel-eslint": "^8.2.6",
+    "babel-jest": "^26.2.2",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "bulma": "^0.9.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.5.0",
     "eslint": "^7.6.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-config-standard-jsx": "^8.1.0",
@@ -41,6 +45,8 @@
     "eslint-plugin-standard": "^4.0.1",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.2.2",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.3",
     "sass-resources-loader": "^2.0.3",
@@ -48,5 +54,23 @@
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/index.js"
+    ],
+    "coverageReporters": [
+      "text"
+    ],
+    "setupFiles": [
+      "./src/setupTests.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less|scss|svg)$": "identity-obj-proxy"
+    }
   }
 }
