--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "install": "^0.13.0",
     "npm": "^6.14.7",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-crossfade-image": "^1.2.0",
+    "react-dom": "^16.13.1",
+    "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
